--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 astroid==2.3.3
 colorama==0.4.3
+dj-database-url==0.5.0
 Django==2.2.11
 django-crispy-forms==1.9.0
 django-environ==0.4.5
+django-heroku==0.3.1
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
@@ -11,4 +13,5 @@ pylint==2.4.4
 pytz==2019.3
 six==1.14.0
 sqlparse==0.3.1
+whitenoise==5.0.1
 wrapt==1.11.2
